# cmake-skeleton

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
cmake/: CheckCXXSourceFileCompiles.cmake  EnableSanitizers.cmake  SupportedCompileOptions.cmake
cmake/analysis/: Analysis.cmake  ClangTidy.cmake  CppCheck.cmake  FindClangTidy.cmake  FindRunClangTidy.cmake  Findcppcheck.cmake  Findflint.cmake  Findoclint.cmake  FlintPlusPlus.cmake  OCLint.cmake  expand_command.cmake
engine/src/: CMakeLists.txt
engine/src/engine/: engine.cpp  engine.h
game/src/: CMakeLists.txt
game/src/game/: main.cpp
tests/compiler/: compiler_test.cxx
